--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Input fields spacing -->
+    <dimen name="input_margin_horizontal">8dp</dimen>
+    <dimen name="input_margin_vertical">16dp</dimen>
 </resources>
