--- a/app/src/main/res/layout/activity_new_stock.xml
+++ b/app/src/main/res/layout/activity_new_stock.xml
@@ -11,6 +11,7 @@
     >
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_product_text_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/input_margin_vertical"
@@ -19,7 +20,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_product"
+            android:id="@+id/input_product_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
