--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#ffc107</color>
 
     <color name="light_grey">#9e9e9e</color>
+    <color name="medium_grey">#bdbdbd</color>
+    <color name="dark_grey">#424242</color>
 </resources>
