--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="textInputStyle">@style/AppTextInputLayout</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -22,8 +23,25 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="AppTextInputLayout" parent="Widget.Design.TextInputLayout">
 
+    </style>
+
+
+    <style name="SelectDialogItemText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+    </style>
+
+    <style name="SelectDialogItemText.Item">
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="SelectDialogItemText.Empty">
+        <item name="android:textColor">#999</item>
+        <!-- TODO refactor colors etc. into theme attributes -->
     </style>
 
 </resources>
