--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -4,9 +4,9 @@
     style="@style/SelectDialogItemText.Item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="24dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="16dp"
+    android:paddingStart="@dimen/search_result_margin_left"
+    android:paddingEnd="@dimen/search_result_margin_right"
+    android:paddingTop="@dimen/search_result_spacing"
+    android:paddingBottom="@dimen/search_result_spacing"
     tools:text="Item"
     />
