nav drawer top spacing

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="nav_drawer_padding_top">36dp</dimen>
 
     <!-- Screen margin -->
     <dimen name="activity_margin_top">16dp</dimen>
