--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:paddingTop="@dimen/nav_drawer_padding_top"
         android:fitsSystemWindows="true"
         app:menu="@menu/activity_main_drawer"
         />
