nav drawer top spacing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,8 @@
         android:paddingTop="@dimen/nav_drawer_padding_top"
         android:fitsSystemWindows="true"
         app:menu="@menu/activity_main_drawer"
-        />
+        >
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
