--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,4 +2,7 @@
 <resources>
     <attr name="textColorPrimary" format="reference" />
     <attr name="textColorSecondary" format="reference" />
+    <declare-styleable name="AddNewTextView">
+        <attr name="searchItemType" format="string" />
+    </declare-styleable>
 </resources>
