--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     >
@@ -13,7 +13,7 @@
         android:layout_margin="16dp"
         android:layout_toStartOf="@id/amount"
         android:layout_alignParentStart="true"
-        android:gravity="center|left"
+        android:gravity="center|start"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:text="Product name"
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center|left"
+            android:gravity="center|start"
             tools:text="1900.00 kg"
             />
 
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center|left"
+            android:gravity="center|start"
             tools:text="100 boxes"
             />
     </LinearLayout>
